<resources>
    <string name="app_name">WhoRules?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Who rules?</string>
    <string name="nav_header_subtitle">von Marco</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">Über</string>
    <string name="title_activity_settings">Einstellungen</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Allgemein</string>


    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for people -->
    <string name="pref_header_notifications">Benachrichtigungen</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="title_activity_about">Über</string>
    <string name="current_ruler_title">Aktueller Regent:</string>
    <string name="previous_rulers_title">Bisherige Regenten:</string>


    <string name="pref_header_people">Vasallen</string>
    <string name="designate">Regent</string>
    <string name="ranks">Ränge</string>
    <string name="configure">Konfigurieren</string>
    <string name="timerToDrink">Timer</string>
    <string name="since">seit</string>
    <string name="title_vasalls_list">Liste der Vasallen</string>
    <string name="title_timer">Timer</string>
    <string name="notification_channel_new_ruler">Neuer Regent</string>
    <string name="notification_channel_new_ruler_desc">Neuer Regent</string>
    <string name="start">starten</string>
    <string name="title_ranks">Ränge</string>
    <string name="vote_new_ruler">Neuen Regenten wählen</string>
    <string name="add_new_vasall">Neuen Vasallen erstellen</string>
    <string name="beers">Biere</string>
    <string name="add_new_beer">Neues Bier</string>
    <string name="count">Anzahl</string>
    <string name="prosecutors">Ankläger</string>
    <string name="description">Grund</string>
    <string name="defendant">Angeklagter</string>
    <string name="numberOfBeers">Anzahl Biere</string>
    <string name="edit">Bearbeiten</string>
    <string name="delete">Löschen</string>
    <string name="add">Hinzufügen</string>
    <string name="add_beer">Strafbier hinzufügen</string>
    <string name="add_beer_text">Bitte gebe den Ankläger, Angeklagten, Grund und Anzahl der Strafbiere ein:</string>
    <string name="beer_modify">Bier bearbeiten</string>
    <string name="beer_modify_text">Bitte gebe den Ankläger, Angeklagten, Grund und Anzahl der Strafbiere ein:</string>
    <string name="save">Speichern</string>
    <string name="vasall_modify">Vasalle bearbeiten</string>
    <string name="vasall_modify_text">Bitte gebe den Namen, Rang und Anzahl der Regentschaften des Vasallen %s ein:</string>
    <string name="seconds">Sekunden</string>
    <string name="timer_add_text">Bitte gebe die Dauer in Sekunden ein:</string>
    <string name="new_timer">Neuer Timer</string>
    <string name="timer_drink">Trinken!</string>
    <string name="name">Name</string>
    <string name="numberOfRegencies">Anzahl Regentschaften</string>
    <string name="vasall_new_text">Bitte gebe den Namen, Rang und Anzahl der Regentschaften des neuen Vasallen ein:</string>

</resources>
