<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/ic_menu_random"
            android:title="@string/designate" />

        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_people"
            android:title="@string/pref_header_people" />

        <item
            android:id="@+id/nav_ranks"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/ranks" />

        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_menu_timer"
            android:title="@string/timerToDrink" />

        <item
            android:id="@+id/nav_beers"
            android:icon="@android:drawable/btn_default"
            android:title="@string/beers" />


    </group>


</menu>
